resolve overflow on gallery items

--- a/wp-content/themes/connection-theme/sass/_gallery.scss
+++ b/wp-content/themes/connection-theme/sass/_gallery.scss
@@ -19,9 +19,8 @@
 	flex-direction: column;
 	flex-wrap: wrap;
 	height: 130vh;
-	.gallery-item { float: none; margin: 1%;
-		.gallery-icon.portrait { max-height:  300px; overflow: hidden; }
-		a { display: block; min-width: 100%; max-height: 300px; }
+	.gallery-item { float: none; margin: 1%; padding: 5px 5px 0; border-bottom: 5px solid #fff; overflow: hidden;
+		a { display: block; min-width: 100%; }
 		img { min-width: 100%; }
 	}
 }
