--- a/wp-content/themes/connection-theme/style.css
+++ b/wp-content/themes/connection-theme/style.css
@@ -1294,7 +1294,7 @@ h3, .gamma, #calendar_wrap caption { font-size: 2em; }
 h4, .delta { font-size: 1.6em; }
 
 /* line 8, sass/_typography.scss */
-p { font-size: 1.4em; margin-bottom: .5em; line-height: 1.2; }
+p { font-size: 1.4em; margin-bottom: .5em; }
 
 /* line 10, sass/_typography.scss */
 .strong { font-weight: bold; }
@@ -1410,7 +1410,7 @@ p { font-size: 1.4em; margin-bottom: .5em; line-height: 1.2; }
 .next { right: 0; }
 
 /* line 1, sass/_widgets.scss */
-.widget-wrapper { margin-bottom: 0; background: #fff; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; border-radius: 3px; min-height: 230px; }
+.widget-wrapper { margin-bottom: 0; background: #fff; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; border-radius: 3px; }
 
 /* line 3, sass/_widgets.scss */
 #widgets.search { background: #f6efe9; margin-bottom: 10px; }
@@ -1431,19 +1431,9 @@ p { font-size: 1.4em; margin-bottom: .5em; line-height: 1.2; }
 #widgets .widget_recent_entries ul a { font-size: 1.4em; }
 /* line 19, sass/_widgets.scss */
 #widgets .tribe-events-list-widget ol li h4:before { content: '\E825'; font-family: "fontello"; display: inline-block; margin-right: 3px; color: #92278f; }
-/* line 22, sass/_widgets.scss */
-#widgets .textwidget { font-size: 1.4em; line-height: 1.2; }
-/* line 24, sass/_widgets.scss */
-#widgets .gallery-item .wp-caption-text.gallery-caption { display: none; }
 
-/* line 28, sass/_widgets.scss */
+/* line 24, sass/_widgets.scss */
 .widget-gallery-slideshow.carousel .slideshow-window { background: none; border: none; margin-bottom: 0; }
-/* line 29, sass/_widgets.scss */
-.widget-gallery-slideshow.carousel .slideshow-window .slideshow-controls { display: none !important; }
-/* line 30, sass/_widgets.scss */
-.widget-gallery-slideshow.carousel .slideshow-window .slideshow-loading { background: url(images/loader.gif) 50% 50% no-repeat; background-size: 50px auto; }
-/* line 31, sass/_widgets.scss */
-.widget-gallery-slideshow.carousel .slideshow-window .slideshow-loading img { display: none !important; }
 
 /* line 8, sass/_forms.scss */
 input[type=text], input[type=search], input[type=password], input[type=email], input[type=url], textarea, .field, #tribe-bar-form input[type="text"] { line-height: 16px; margin: 0; border: none; background-color: white; color: #444444; padding: 6px 8px; -webkit-box-shadow: 0 1px 0 white, inset 0 1px 3px 1px rgba(0, 0, 0, 0.2); -moz-box-shadow: 0 1px 0 white, inset 0 1px 3px 1px rgba(0, 0, 0, 0.2); -ms-box-shadow: 0 1px 0 white, inset 0 1px 3px 1px rgba(0, 0, 0, 0.2); box-shadow: 0 1px 0 white, inset 0 1px 3px 1px rgba(0, 0, 0, 0.2); -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px; border-radius: 2px; width: 100%; }
@@ -1871,9 +1861,6 @@ label .required { left: -5px; position: absolute; top: 5px; }
 /* line 44, sass/_media.scss */
 .pp_content_container .pp_gallery { bottom: -60px; width: 100%; margin-left: -200px; }
 
-/* line 47, sass/_media.scss */
-.jp-carousel-info h2 { margin: 0 !important; padding: 0 !important; }
-
 /* line 2, sass/_gallery.scss */
 .gallery .gallery-item { float: left; }
 
@@ -1889,14 +1876,23 @@ label .required { left: -5px; position: absolute; top: 5px; }
 /* line 15, sass/_gallery.scss */
 .attachment-entry p { margin-top: 10px; }
 
-/* line 18, sass/_gallery.scss */
+/* line 17, sass/_gallery.scss */
+.flexbox .gallery { display: flex; flex-direction: column; flex-wrap: wrap; height: 130vh; }
+/* line 22, sass/_gallery.scss */
+.flexbox .gallery .gallery-item { float: none; margin: 1%; padding: 5px 5px 0; border-bottom: 5px solid #fff; overflow: hidden; }
+/* line 23, sass/_gallery.scss */
+.flexbox .gallery .gallery-item a { display: block; min-width: 100%; }
+/* line 24, sass/_gallery.scss */
+.flexbox .gallery .gallery-item img { min-width: 100%; }
+
+/* line 29, sass/_gallery.scss */
 .photonic-stream .photonic-picasa-image img { opacity: 1; border: 1px solid #efefef; background: #fff; -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), 0 0 40px rgba(0, 0, 0, 0.06) inset; -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), 0 0 40px rgba(0, 0, 0, 0.06) inset; -ms-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), 0 0 40px rgba(0, 0, 0, 0.06) inset; box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), 0 0 40px rgba(0, 0, 0, 0.06) inset; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; border-radius: 3px; }
-/* line 19, sass/_gallery.scss */
+/* line 30, sass/_gallery.scss */
 .photonic-stream .photonic-pad-photos { padding: 0; margin: 0 !important; }
 
-/* line 24, sass/_gallery.scss */
+/* line 35, sass/_gallery.scss */
 .AlpinePhotoTiles_container_class .AlpinePhotoTiles-link { opacity: .8; }
-/* line 25, sass/_gallery.scss */
+/* line 36, sass/_gallery.scss */
 .AlpinePhotoTiles_container_class .AlpinePhotoTiles-link:hover { opacity: 1; }
 
 /*
@@ -2051,7 +2047,7 @@ footer.full ul, footer.sub-header-nav ul { padding-left: 25px; padding-right: 25
   .main-pane, #featured { float: none; width: 100%; } }
 
 /* line 68, sass/_connection.scss */
-.photo-slider, .featured-slider { width: 100%; height: 350px; position: relative; background-position: 0 80%; background-size: cover; background-repeat: no-repeat; }
+.photo-slider, .featured-slider { width: 100%; height: 350px; position: relative; }
 /* line 69, sass/_connection.scss */
 .photo-slider img, .featured-slider img { border: none; -webkit-box-shadow: none; -moz-box-shadow: none; -ms-box-shadow: none; box-shadow: none; margin-top: -180px; position: absolute; bottom: -200px; }
 /* line 70, sass/_connection.scss */
@@ -2097,7 +2093,7 @@ footer.full ul, footer.sub-header-nav ul { padding-left: 25px; padding-right: 25
 /* line 99, sass/_connection.scss */
 .secondary-pane article img { width: 100%; }
 /* line 101, sass/_connection.scss */
-.secondary-pane .highlight, .secondary-pane .news, .secondary-pane .blog { background-color: #f6efe9; min-height: 250px; }
+.secondary-pane .highlight, .secondary-pane .news, .secondary-pane .blog { background-color: #f6efe9; }
 
 /* line 107, sass/_connection.scss */
 .call-to-action { text-align: left; }
